- cosmetics (goffy)
- fixed bugs in getXoopsFormSelectFile and getClassGetTableSolenameById (goffy)
- added save/load group permissions to sample data (goffy)
- rebuild blocks file (goffy)
- splitted CreateHtmlSmartycodes into CreateHtmlcode/CreateSmartycode for better handling (goffy)
- added images for checkbox and status in lists in admin area (goffy)

<h5>3.01 Alpha 2   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.2
<hr>
- code cosmetics (mamba)
- added "Build" icons to Modules and Tables tabs - time saver (mamba)
- cosmetics admin area (goffy)
- fixed problems with test data (goffy)
- fixed bug with upload file/images in admin pages (goffy)
- fixed bug with save permissions in admin pages (goffy)
- fixed bugs in tpl creation (goffy)
- improved tpl creation (goffy)
- added check for upload permission to form class (goffy)
- removed fb and disqus comments preferences (goffy)
- fixed bug in print.php (goffy)

*************************************************************
THIS IS LAST VERSION WHICH CREATES MODULES WITHOUT NAMESPACES
*************************************************************

<h5>3.01 Alpha 1   [2020-01-01]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.1
<hr>
- namespaces (mamba)
- class autoloading (mamba)
- added feedback page (mamba)
- PSR12 cosmetics (mamba)
- fixed sorting of fields (mamba)
- updated Scrutinizer config (mamba)
- added Config (mamba)
- moved icons to /images (mamba)

=================================================
2018/03/27: Version 1.91 alpha 3.6 [NOT RELEASED]
=================================================
- change from adminMenu to adminObject (mamba)
- buttons on left (mamba)
- replace static calls (mamba)
- fix statistics (mamba)
- implemented yoda in file creation (goffy)
- css corrections (goffy)
- yoda corrections (goffy)
- corrected css for templates admin tables/fields (goffy)
- replace < br /> by < br >; changed also function TDMCreateHTMLCode, TDMCreateHTMLSmartyCode (goffy)