@@ -20,6 +20,7 @@
 - rebuild blocks file (goffy)
 - splitted CreateHtmlSmartycodes into CreateHtmlcode/CreateSmartycode for better handling (goffy)
 - added images for checkbox and status in lists in admin area (goffy)
+- fixed bugs at building (goffy)
 
 <h5>3.01 Alpha 2   [WORK IN PROGRESS - NOT RELEASED]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.2
 <hr>
